# redis-bindings

./: .travis.yml  LICENSE  Pipfile  README.md  README.rst  bindings.py  descriptors.py  example.py  requirements.txt  setup.cfg  setup.py
redistypes/: __init__.py  bindings.py  descriptors.py  pickling.py
redistypes/bindings/: __init__.py  redis_dict.py  redis_list.py
tests/: conftest.py  test_list.py  test_redis_base_field.py  test_redis_dict.py  test_redis_field.py  test_redis_list.py  test_redis_list_field.py
tests/test_redis_dict/: conftest.py  test_binding.py  test_descriptor.py
tests/test_redis_list/: conftest.py  test_binding.py  test_descriptor.py
