[metadata]
name = redistypes
description = Redis native types for Python
url = https://github.com/vladimirshkoda/redis-bindings
long_description = file: README.rst
version = 0.1.0
license = MIT
license_file = LICENSE
author = Vladimir Shkoda
author_email = vladimir.shkoda.51@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Topic :: Database
    Topic :: Software Development
keywords = redis, key-value, store, bindings, types, descriptor, orm
platform = any

[options]
packages = redistypes
install_requires = redis>=3.0
python_requires = >=3.5
zip_safe = false
include_package_data = true
