[metadata]
name = redistypes
description = Redis native types for Python
url = https://github.com/vladimirshkoda/redis-bindings
long_description = file: README.rst
version = 0.2.0
license = MIT
license_file = LICENSE
author = Vladimir Shkoda
author_email = vladimir.shkoda.51@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Topic :: Database
    Topic :: Software Development
keywords = redis, key-value, store, bindings, types, descriptor, orm
platform = any

[options]
packages = redistypes
install_requires = redis>=3.0
python_requires = >=3.5
zip_safe = false
include_package_data = true

[isort]
multi_line_output = 3
include_trailing_comma = true
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = FIRSTPARTY
line_length = 99

[flake8]
max-complexity = 6
max-line-length = 100
max-local-variables = 6
inline-quotes = single
accept-encodings = utf-8
format = pylint
ignore =
    # It's python3, no "Coding magic comment not found"
    C101
    # Since the library works with any type, such variables as "value" or "item" are common
    Z110
    # Too short variable names are also common
    Z111
    # Allowing local folder imports
    Z300
    # __delitem__ methods are used properly
    Z434
per-file-ignores =
    # I know I'm using pickle
    redistypes/pickling.py: S403, S301
    # __init__ module should have some logic with __all__ variable icluded
    __init__.py: Z410, Z412
    # Magic methods should not be counted
    redistypes/bindings.py: Z214
